--- a/.github/workflows/trigger_testing.yml
+++ b/.github/workflows/trigger_testing.yml
@@ -1,21 +1,43 @@
-name: Notify Testing Repository
+name: Auto Sync to Testing Repository
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch
+      - main  # Trigger on push to main branch in Developing repository
 
 jobs:
-  notify:
+  sync:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Send an HTTP trigger to the Testing repository
-      - name: Trigger Testing Workflow
+      # Step 1: Checkout the Developing repository (source repository)
+      - name: Checkout Developing Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for accurate sync
+
+      # Step 2: Set up Git user
+      - name: Configure Git User
         run: |
-          curl -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{"event_type": "triggered_by_developing"}' \
-          https://api.github.com/repos/sneha6396/Testing/dispatches
+          git config --global user.name "sneha6396"
+          git config --global user.email "ikuttisneha@gmail.com"
+
+      # Step 3: Clone the Testing repository to a temporary directory
+      - name: Clone Testing Repository
+        run: |
+          git clone https://sneha6396:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/sneha6396/Testing-repo.git /tmp/testing-repo
+
+      # Step 4: Sync files from Developing to Testing repository
+      - name: Sync Files to Testing Repository
+        run: |
+          rsync -av --delete ./ /tmp/testing-repo/ --exclude .git
+          cd /tmp/testing-repo
+          git status  # Check the current status after sync
+
+      # Step 5: Commit and Push changes to Testing repository
+      - name: Commit and Push Changes
+        run: |
+          cd /tmp/testing-repo
+          git add -A
+          git commit -m "Auto-sync: Updating from Developing repository" || echo "No changes to commit."
+          git push origin main
