--- a/.github/workflows/trigger_testing.yml
+++ b/.github/workflows/trigger_testing.yml
@@ -25,7 +25,7 @@ jobs:
       # Step 3: Clone the Testing repository to a temporary directory
       - name: Clone Testing Repository
         run: |
-          git clone https://sneha6396:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/sneha6396/Testing-repo.git /tmp/testing-repo
+          git clone https://sneha6396:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/sneha6396/Testing.git /tmp/testing-repo
 
       # Step 4: Sync files from Developing to Testing repository
       - name: Sync Files to Testing Repository
