--- a/.github/workflows/trigger_testing.yml
+++ b/.github/workflows/trigger_testing.yml
@@ -37,7 +37,7 @@ jobs:
       # Step 5: Commit and Push changes to Testing repository
       - name: Commit and Push Changes
         run: |
-          cd /tmp/testing-repo
+          cd /tmp/testing
           git add -A
           git commit -m "Auto-sync: Updating from Developing repository" || echo "No changes to commit."
           git push origin main
