--- a/.github/workflows/trigger_testing.yml
+++ b/.github/workflows/trigger_testing.yml
@@ -39,5 +39,9 @@ jobs:
         run: |
           cd /tmp/testing-repo
           git add -A
-          git commit -m "Auto-sync: Updating from Developing repository" || echo "No changes to commit."
-          git push origin main
+          if git diff --cached --quiet; then
+            echo "No changes to commit. Skipping push."
+          else
+            git commit -m "Auto-sync: Updating from Developing repository"
+            git push origin main
+          fi
