--- a/.github/workflows/trigger-test.yml
+++ b/.github/workflows/trigger-test.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Testing Repository Workflow
-        uses: peter-evans/repository-dispatch@v1  # Ensure the action version is correct
+        uses: peter-evans/repository-dispatch@v1  
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Ensure the token has proper permissions
-          repository: Sneha6396/Testing  # Correct repository name format
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} 
+          repository: Sneha6396/Testing  
           event-type: run-tests
